syntax = "proto3";
option go_package = "./api";
package api;

service UsernatorApi {
  rpc GetUser (UserRequest) returns (UserResponse) {}
  rpc GetUsers (UsersRequest) returns (UsersResponse) {}
}


message UserRequest {
  uint64 userId = 1;
}

message UserResponse {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
}

message UsersRequest {
  repeated uint64 userIds = 1;
}

message UsersResponse {
  repeated UserResponse users = 1;
}